@@ -16,7 +16,6 @@
 			(see http://notmuchmail.org/nmbug/)</flag>
 		<flag name="pick">Experimental threaded message view for the emacs
 			interface</flag>
-		<flag name="vim">Install Vim UI (experimental)</flag>
 	</use>
 	<longdescription lang="en">
 		Notmuch is a system for indexing, searching, reading, and tagging large
