@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Aug 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
+  metadata.xml:
+  Get rid of Ruby bindings and Vim UI. If someone would like to have Ruby
+  and/or Vim UI, correct patch is welcome.
+
   08 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
   Handling installation of new Notmuch UI for Vim.
 
